poke/testsuite/poke.pkl/struct-method-diag-15.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    defvar v = 10;

    method foo = (int i = v) int: /* { dg-error "invalid.*variable" } */
      {
        return i;
      }
  };
